--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,23 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
+    <header>
+      <div class="headline">skin note</div>
+
+      <nav>
+        <% if user_signed_in? %>
+          <%= link_to "マイページ", user_notes_path %>
+          <%= link_to "つぶやき一覧", user_tweets_path %>
+          <%= link_to "アイテム一覧", user_items_path %>
+          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "About", user_homes_about_path %>
+          <%= link_to "ログイン", new_user_session_path %>
+        <% end %>
+      </nav>
+
+    </header>
     <%= yield %>
   </body>
 </html>
