--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,10 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+<div class="container">
   <body>
     <header>
       <div class="headline">skin note</div>
-
       <nav>
         <% if user_signed_in? %>
           <%= link_to "マイページ", user_notes_path %>
@@ -23,8 +23,8 @@
           <%= link_to "ログイン", new_user_session_path %>
         <% end %>
       </nav>
-
     </header>
     <%= yield %>
   </body>
+</div>
 </html>
