--- a/app/views/layouts/_main_button.html.erb
+++ b/app/views/layouts/_main_button.html.erb
@@ -1,5 +1,8 @@
-
-<%= link_to "記録する", new_user_note_path, class: "btn btn-warning" %>
-<%= link_to "マイスキンケア", user_my_items_path, class: "btn btn-warning" %>
-<%= link_to "口コミを書く", user_items_path, class: "btn btn-warning" %>
-<%= link_to "つぶやく", user_tweets_path, class: "btn btn-warning" %>
+<div class="container">
+	<div class="row">
+		<%= link_to "記録する", new_user_note_path, class: "btn btn-warning" %>
+		<%= link_to "マイスキンケア", user_my_items_path, class: "btn btn-warning" %>
+		<%= link_to "口コミを書く", user_items_path, class: "btn btn-warning" %>
+		<%= link_to "つぶやく", user_tweets_path, class: "btn btn-warning" %>
+	</div>
+</div>
