--- a/app/views/user/notes/new.html.erb
+++ b/app/views/user/notes/new.html.erb
@@ -13,11 +13,11 @@
 			<%= f.select :condition, Note.conditions.keys, autofocus: true, autocomplete: "condition" %>
 		</div>
 		<h3>使用したスキンケア</h3>
-		<% @my_items.each do |my_item| %>
-		<%#= f.radio_button :payment_method, :銀行振り込み %> <%#= my_item.item_name %>
-		<% end %>
-		<%= f.collection_select(:my_item_id, @my_item, :id, :item_name, prompt: "--選択してください--") %>
-
-		<%= f.submit "登録する" %>
+  		<div class="field">
+    		  <% @my_items.each do |my_item| %>
+    			  <%= check_box_tag 'todays_items[my_item_id][]', my_item.id %><%= my_item.item_name %>
+			  <% end %>
+			<%= f.submit "登録する" %>
+		</div>
 	<% end %>
 </div>
