--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,4 +1,8 @@
-<h1>Topページです</h1>
+<div class="container">
+	<h1>Topページです</h1>
 
-<%= link_to "ユーザ新規登録", new_user_registration_path %>
-<%= link_to "ログイン", new_user_session_path %>
+	<%= link_to "ユーザ新規登録", new_user_registration_path %>
+	<%= link_to "ログイン", new_user_session_path %>
+
+	<%= link_to "管理者ログイン", new_admin_session_path %>
+</div>
