[Add]condition graph

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,1 +1,22 @@
 <h1>アイテム編集ページ</h1>
+
+	<%= form_with :model => @item, url:admin_items_path(@item), method: :post, local: true, class:"form-horizontal" do |f| %>
+		<div>
+			<%= f.label "商品名" %>
+			<%= f.text_field :item_name %>
+		</div>
+		<div>
+			<%= f.label "商品画像" %>
+			<%= f.attachment_field :image %>
+		</div>
+
+		<div>
+			<%= f.label "商品ジャンル" %>
+			<%= f.select :item_genre, Item.item_genres.keys, autofocus: true, autocomplete: "condition" %>
+		</div>
+		<div>
+			<%= f.label "メーカー" %>
+			<%= f.text_field :maker %>
+		</div>
+		<%= f.submit "登録する" %>
+	<% end %>
