--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
           <div class="header-container">
             <ul class="nav-list">
               <% if user_signed_in? %>
-                <li class="nav-list-item"><%= link_to "マイページ", user_notes_path %></li>
+                <li class="nav-list-item"><%= link_to "マイページ", user_notes_path(year: Time.now.year, month: Time.now.month) %></li>
                 <li class="nav-list-item"><%= link_to "アイテム一覧", user_items_path %></li>
                 <li class="nav-list-item"><%= link_to "つぶやき一覧", user_tweets_path %></li>
                 <li class="nav-list-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
