--- a/app/views/user/notes/index.html.erb
+++ b/app/views/user/notes/index.html.erb
@@ -1,4 +1,75 @@
 <div class="container">
 	<%= render "layouts/main_button" %>
 	<h1>マイページ</h1>
+	<canvas id="circleChart"></canvas>
+	<canvas id="myChart"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.bundle.min.js"></script>
 </div>
+
+<script>
+var ctx = document.getElementById('myChart').getContext('2d');
+var chart = new Chart(ctx, {
+    // The type of chart we want to create
+    type: 'line',
+
+    // The data for our dataset
+    data: {
+        datasets: [{
+            label: 'My First dataset',
+            backgroundColor: 'rgb(255, 99, 132)',
+            borderColor: 'rgb(255, 99, 132)',
+            fill: false,
+            data: [
+            	<% (@beginning_of_month..@end_of_month).each do |date| %>
+		            {
+		                x: `<%= date %>`,
+		                y: `<%= @notes.find_by(date: date)&.read_attribute_before_type_cast(:condition) %>`
+		            },
+	            <% end %>
+            ]
+        }]
+    },
+
+    // Configuration options go here
+    options: {
+        scales: {
+            xAxes: [{
+                type: 'time',
+                time: {
+                    unit: 'day'
+                }
+            }],
+            yAxes: [{
+            ticks: {
+                min: 0,
+                max: 3
+            },
+            scaleLabel: {
+                display: true,
+                labelString: '肌の調子'
+            }
+        }]
+        }
+    }
+});
+
+var ctx = document.getElementById('circleChart').getContext('2d');
+var data = {
+    datasets: [{
+        data: [10, 20, 30]
+    }],
+
+    // These labels appear in the legend and in the tooltips when hovering different arcs
+    labels: [
+        'Red',
+        'Yellow',
+        'Blue'
+    ]
+};
+
+var myPieChart = new Chart(ctx, {
+    type: 'doughnut',
+    data: data,
+    options: {}
+});
+</script>
