--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,7 +42,7 @@ header {
 
 .headline {
 	font-size: 35px;
-	color: #83ccd2;
+	color: #38C5D1;
 	line-height: 90px;
 	padding: 5px 0;
 	text-decoration: none;
@@ -51,13 +51,16 @@ header {
 
 .nav {
 	height: 50px;
-	background-color: #83ccd2;
+	background-color: #38C5D1;
 }
 
 .nav-list {
 	font-size: 14px;
 	height: 50px;
+}
 
+.nav-list a {
+	color: white;
 }
 
 .nav-list-item {
