[Add]tweet show

--- a/app/views/user/my_items/index.html.erb
+++ b/app/views/user/my_items/index.html.erb
@@ -39,7 +39,7 @@
 			<tr>
 				<td><%= my_item.item_name %></td>
 				<td><%= my_item.maker %></td>
-				<td><%= link_to "削除する", user_my_item_path(my_item), method: :delete, class: "btn btn-warning" %>
+				<td><%= link_to "削除する", user_my_item_path(my_item), method: :delete, class: "btn btn-warning" %></td>
 			</tr>
 		<% end %>
 		</tbody>
