--- a/app/views/user/tweets/index.html.erb
+++ b/app/views/user/tweets/index.html.erb
@@ -1,11 +1,13 @@
 <div class="container">
 	<%= render "layouts/main_button" %>
+
 	<h3>つぶやき投稿</h3>
 		<%= form_with :model => @tweet, url:user_tweets_path, method: :post, local: true, class:"form-horizontal" do |f| %>
 		<%= f.label "つぶやき内容" %>
 		<%= f.text_area :tweet_text %>
 		<%= f.submit "投稿する" %>
 	<% end %>
+
 	<h3>みんなのつぶやき一覧</h3>
 	<table class="table table-hover">
 		<thead>
@@ -46,7 +48,10 @@
 		<tbody>
 			<% @your_tweets.each do |your_tweet| %>
 				<tr>
-					<td><%= your_tweet.tweet_text %></td>
+					<td><%= link_to user_tweet_path(your_tweet) do %>
+							<%= your_tweet.tweet_text %>
+						<% end %>
+					</td>
 					<td><span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span></td>
 					<td><span class="glyphicon glyphicon-comment" aria-hidden="true"></span></td>
 					<td><%= link_to "削除する",user_tweet_path(your_tweet), method: :delete, class: "btn btn-warning" %></td>
