--- a/app/views/user/items/show.html.erb
+++ b/app/views/user/items/show.html.erb
@@ -6,5 +6,38 @@
 	<%= @item.maker %>
 
 	<h1>口コミ投稿</h1>
-	<%= form_with :model => @review, url:user_notes_path, method: :post, local: true, class:"form-horizontal" do |f| %>
+
+	<%= form_with model: @review, url:user_item_reviews_path(@item.id), method: :post, local: true, class:"form-horizontal" do |f| %>
+	<div id="star"
+		data-star-on="<%= asset_path('star-on.png') %>"
+		data-star-off="<%= asset_path('star-off.png') %>"
+		data-star-half="<%= asset_path('star-half.png') %>" >
+		<!-- ↑ consoleに画像のURLを出力させる(検証ツールから見られる) -->
+	</div>
+
+
+		<%= f.hidden_field :user_id, value: current_user.id %>
+
+
+		<!-- <div data-score="1"></div> -->
+		<%= f.text_area :review_text %>
+		<%= f.submit "投稿する" %>
+
+	<% end %>
+
+	<script>
+		var star = document.getElementById('star')
+		var starOn = star.dataset.starOn
+		var starOff = star.dataset.starOff
+		var starHalf = star.dataset.starHalf
+		$('#star').raty({
+			starOn: starOn,
+			starOff: starOff,
+			starHalf: starHalf
+		});
+		// ↑ raty();だけだと画像のURLが正しく受け取れないので｛｝をつける
+	</script>
+
 </div>
+
+
