--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-	<h1>Topページです</h1>
+	<div class="main-visual">
+	</div>
 
 	<%= link_to "ユーザ新規登録", new_user_registration_path %>
 	<%= link_to "ログイン", new_user_session_path %>
