--- a/app/views/user/items/show.html.erb
+++ b/app/views/user/items/show.html.erb
@@ -4,40 +4,79 @@
 	<%= @item.item_name %>
 	<%= @item.item_genre %>
 	<%= @item.maker %>
+	<div id="averagestar"
+		data-star-on="<%= asset_path('star-on.png') %>"
+		data-star-off="<%= asset_path('star-off.png') %>"
+		data-star-half="<%= asset_path('star-half.png') %>"
+		data-score="<%= @average_score %>" ><br>
+	</div><%= @average_score %>
+
+	<h1>口コミ一覧</h1>
+	<% @reviews.each do |review| %>
+		<%= review.review_text %>
+		<div id="star<%= review.id %>"
+		data-star-on="<%= asset_path('star-on.png') %>"
+		data-star-off="<%= asset_path('star-off.png') %>"
+		data-score="<%= review.score %>" ><br>
+
+			<script>//口コミ一覧の星/////////////////////////////////////////////////////////////////////////////////
+
+				var star = document.getElementById(`star<%= review.id %>`);
+				var starOn = star.dataset.starOn
+				var starOff = star.dataset.starOff
+				$(star).raty({
+					starOn: starOn,
+					starOff: starOff,
+					score: <%= review.score %>,
+					readOnly: true // 編集できない星
+				});
+
+			</script>
+		</div>
+	<% end %>
 
 	<h1>口コミ投稿</h1>
 
 	<%= form_with model: @review, url:user_item_reviews_path(@item.id), method: :post, local: true, class:"form-horizontal" do |f| %>
-	<div id="star"
-		data-star-on="<%= asset_path('star-on.png') %>"
-		data-star-off="<%= asset_path('star-off.png') %>"
-		data-star-half="<%= asset_path('star-half.png') %>" >
-		<!-- ↑ consoleに画像のURLを出力させる(検証ツールから見られる) -->
-	</div>
+		<div id="star"
+			data-star-on="<%= asset_path('star-on.png') %>"
+			data-star-off="<%= asset_path('star-off.png') %>" >
+			<!-- ↑ consoleに画像のURLを出力させる(検証ツールから見られる) -->
+		</div>
 
-
-		<%= f.hidden_field :user_id, value: current_user.id %>
-
-
-		<!-- <div data-score="1"></div> -->
-		<%= f.text_area :review_text %>
-		<%= f.submit "投稿する" %>
+			<%= f.hidden_field :user_id, value: current_user.id %>
+			<%= f.text_area :review_text %>
+			<%= f.submit "投稿する" %>
 
 	<% end %>
-
-	<script>
-		var star = document.getElementById('star')
-		var starOn = star.dataset.starOn
-		var starOff = star.dataset.starOff
-		var starHalf = star.dataset.starHalf
-		$('#star').raty({
-			starOn: starOn,
-			starOff: starOff,
-			starHalf: starHalf
-		});
-		// ↑ raty();だけだと画像のURLが正しく受け取れないので｛｝をつける
-	</script>
-
 </div>
 
+<script>
+
+//商品詳細の星/////////////////////////////////////////////////////////////////////////////////
+	var star = document.getElementById('averagestar')
+	var starOn = star.dataset.starOn
+	var starOff = star.dataset.starOff
+	var starHalf = star.dataset.starHalf
+
+	$(star).raty({
+		starOn: starOn,
+		starOff: starOff,
+		starHalf: starHalf,
+		half: true,
+		readOnly: true // 編集できない星
+	});
+
+//口コミ投稿の星/////////////////////////////////////////////////////////////////////////////////
+
+	var star = document.getElementById('star')
+	var starOn = star.dataset.starOn
+	var starOff = star.dataset.starOff
+	$(star).raty({
+		starOn: starOn,
+		starOff: starOff,
+	});
+	// ↑ raty();だけだと画像のURLが正しく受け取れないので｛｝をつける
+
+</script>
 
