--- a/app/views/user/tweets/show.html.erb
+++ b/app/views/user/tweets/show.html.erb
@@ -2,4 +2,27 @@
 	<h1>つぶやきの詳細ページです</h1>
 
 	<%= @tweet.tweet_text %>
+	(<%= @tweet.user.age %>歳/<%= @tweet.user.skin_type %>)
+
+
+	<table class="table">
+		<tbody>
+			<% @tweet.comments.each do |comment| %>
+				<tr>
+					<td>
+						<%= comment.comment_text %>
+					<td>
+						(<%= comment.user.age %>歳/<%= comment.user.skin_type %>)
+					</td>
+				</tr>
+			<% end %>
+	</tbody>
+</table>
+
+
+	<%= form_with model: [@tweet, @comment], url:user_tweet_comments_path(@tweet), method: :post, local: true, class:"form-horizontal" do |f| %>
+		<%#= f.hidden_field :tweet_id, value: params[:tweet_id] %>
+		<%= f.text_area :comment_text, size: "90x2" %>
+		<%= f.submit "送信" %>
+	<% end %>
 </div>
